--- a/_sass/minimal-mistakes/_notices.scss
+++ b/_sass/minimal-mistakes/_notices.scss
@@ -13,11 +13,12 @@
 @mixin notice($notice-color) {
   margin: 1em 0 !important;  /* override*/
   padding: 1em;
-  color: #000;
+  color: #fff;
   font-family: $global-font-family;
-  font-size: $type-size-6 !important;
+  font-size: 0.80em !important;
   text-indent: initial; /* override*/
-  background-color: mix(#fff, $notice-color, 50%);
+  // background-color: mix(#fff, $notice-color, 50%);
+  background-color: $notice-color;
   border-radius: $border-radius;
   box-shadow: 0 1px 1px rgba($notice-color, 1);
 
@@ -45,11 +46,13 @@
   }
 
   a {
-    color: mix(#000, $notice-color, 50%);
+    // color: mix(#000, $notice-color, 50%);
 
-    &:hover {
-      color: mix(#000, $notice-color, 40%);
-    }
+    // &:hover {
+    //   color: mix(#000, $notice-color, 40%);
+    // }
+	color: #fff;
+	text-decoration: underline;
   }
 
   code {
